# FinanceAI

./: .dockerignore  CLAUDE.md  PRESENTATION_SCRIPT.md  README.md  Team14_Data_Dakait_FinanceAI.pptx  Tijori AI.html  audit_e2e_test.py  clickhouse_verification.py  custom_seed.py  docker-compose.yml  e2e_seed_real.py  gemini_script.md  github-bulk.sh  github-project-setup.sh  load_test_simulation.py  main.py  package-lock.json  package.json  patch_models.py  playwright_audit.py  pyproject.toml  requirements.txt  setup_db.sh  start_dev.sh  test_e2e.py  test_groups.py  test_implementation.py  test_reporting_api.py  test_shell.py  test_shell2.py  test_shell3.py  test_ui.py  test_view.py  test_view2.py  updated_script_claude.md  verify_structure.py
.claude/: settings.local.json
.marscode/: deviceInfo.json
.playwright-mcp/: page-2026-04-24T09-29-45-861Z.yml
ai/: client.py
ai/pipelines/: anomaly_pipeline.py  ocr_pipeline.py
ai/tools/: openrouter_client.py
apps/accounts/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/core/: ai_views.py  apps.py  audit.py  auth_serializers.py  auth_views.py  clickhouse.py  file_service.py  file_views.py  middleware.py  models.py  notification_views.py  permissions.py  state_machine.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/expenses/: apps.py  models.py  tasks.py
apps/forecast/: apps.py
apps/invoices/: admin.py  analytics_views.py  apps.py  budget_views.py  employee_views.py  feedback_views.py  models.py  policy_views.py  serializers.py  services.py  tasks.py  tests_e2e.py  urls.py  vendor_serializers.py  vendor_views.py  views.py
apps/notifications/: apps.py  dispatcher.py  models.py  serializers.py  urls.py  views.py
apps/query/: apps.py
config/: __init__.py  celery.py  routers.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
docker/: Dockerfile  entrypoint.sh
docs/: 3SC_Finance_FRD_v2.docx  CODE_REVIEW.md  PRESENTATION_SCRIPT.md  REPORTING_BLUEPRINT.md
docs/financeai-diagrams/: README.md
docs/plan/: 00-index.md  01-project-overview.md  02-system-architecture.md  03-data-models.md  04-api-specifications.md  (+10 more)
frontend/: README.md  analyze_one_prototype.html  architecture_diagrams.md  implementation_plan.md  index.html  package.json  system_architecture.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
js/: AIHub.jsx  APHub.jsx  APMatch.jsx  AR.jsx  Anomaly.jsx  App.jsx  BillDetail.jsx  DS.jsx  Dashboard.jsx  FeedbackModal.jsx  FinanceAutomation.jsx  IAM.jsx  Login.jsx  PersonaDashboards.jsx  Reports.jsx  Secondary.jsx  Secondary.jsx_FIX  api.js
uploads/: APHub.jsx  AR.jsx  Anomaly.jsx  App.jsx  CLAUDE_DESIGN_BRIEF 1.md  CLAUDE_DESIGN_BRIEF.md  DS.jsx  Dashboard.jsx  IAM.jsx  Login.jsx  PersonaDashboards.jsx  Secondary.jsx  Shell.jsx  Tijori AI.html
(+167 files in other folders)
