[project]
name = "financeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "celery>=5.6.3",
    "django>=6.0.3",
    "django-allauth>=65.15.1",
    "django-celery-beat>=2.9.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "msal>=1.35.1",
    "pillow>=12.2.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "prophet>=1.3.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "ruff>=0.15.9",
    "scikit-learn>=1.8.0",
    "django-clickhouse-backend"
]
