[project]
name = "financeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
  # --- Web framework ---
  "django>=5.2",
  "djangorestframework>=3.15",
  "drf-spectacular>=0.29.0",
  "django-cors-headers>=4.7.0",
  "uvicorn>=0.34.0",

  # --- Auth ---
  "django-allauth>=65.15.0",
  "djangorestframework-simplejwt>=5.5.0",
  "msal>=1.35.0",

  # --- Database ---
  "psycopg2-binary>=2.9.11",
  "django-environ>=0.12.0",

  # --- Async / Task queue ---
  "celery>=5.6.0",
  "django-celery-beat>=2.9.0",
  "redis>=7.4.0",

  # --- ClickHouse ---
  "clickhouse-connect>=0.8.0",

  # --- AI / LLM ---
  "openai>=1.75.0", # OpenRouter uses OpenAI-compatible API

  # --- ML ---
  "scikit-learn>=1.6.0",
  "joblib>=1.4.0",
  "prophet>=1.1.6",
  "pandas>=2.2.0",
  "numpy>=2.2.0",
  "python-levenshtein>=0.27.0",

  # --- NLP (masking middleware) ---
  "spacy>=3.8.0",
  "presidio-analyzer>=2.2.362",
  "presidio-anonymizer>=2.2.362",

  # --- Image processing (OCR pre-processing) ---
  "pillow>=11.2.0",

  # --- PDF generation ---
  "weasyprint>=64.1",

  # --- Utils ---
  "python-dotenv>=1.2.0",
  "httpx>=0.28.0",          # async HTTP for D365 calls
  "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-django>=4.9.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.1.0",
  "black>=25.1.0",
  "ruff>=0.11.0",
  "factory-boy>=3.3.0",     # test fixtures
]

[tool.ruff]
line-length = 100
target-version = "py314"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config", "ai"]
